/*
 * Copyright (c) 2022-2023 Sienna Lloyd
 *
 * Licensed under the PolyForm Internal Use License 1.0.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License here:
 *  https://github.com/mxplusb/pleiades/blob/mainline/LICENSE
 */

syntax = "proto3";

package kvpb;
option go_package = "github.com/mxplusb/pleiades/pkg/kvpb";

import "errorspb/errors.proto";
import "google/protobuf/timestamp.proto";
import "kvpb/transactions.proto";

message KVStoreWrapper {
  uint64 account = 1;
  string bucket = 2;

  enum RequestType {
    REQUEST_TYPE_UNSPECIFIED = 0;
    REQUEST_TYPE_CREATE_ACCOUNT_REQUEST = 1;
    REQUEST_TYPE_CREATE_ACCOUNT_REPLY = 2;
    REQUEST_TYPE_DELETE_ACCOUNT_REQUEST = 3;
    REQUEST_TYPE_DELETE_ACCOUNT_REPLY = 4;
    REQUEST_TYPE_GET_ACCOUNT_DESCRIPTOR_REQUEST = 5;
    REQUEST_TYPE_GET_ACCOUNT_DESCRIPTOR_REPLY = 6;
    REQUEST_TYPE_CREATE_BUCKET_REQUEST = 7;
    REQUEST_TYPE_CREATE_BUCKET_REPLY = 8;
    REQUEST_TYPE_DELETE_BUCKET_REQUEST = 9;
    REQUEST_TYPE_DELETE_BUCKET_REPLY = 10;
    REQUEST_TYPE_GET_KEY_REQUEST = 11;
    REQUEST_TYPE_GET_KEY_REPLY = 12;
    REQUEST_TYPE_PUT_KEY_REQUEST = 13;
    REQUEST_TYPE_PUT_KEY_REPLY = 14;
    REQUEST_TYPE_DELETE_KEY_REQUEST = 15;
    REQUEST_TYPE_DELETE_KEY_REPLY = 16;
    REQUEST_TYPE_GET_BUCKET_DESCRIPTOR_REQUEST = 17;
    REQUEST_TYPE_GET_BUCKET_DESCRIPTOR_REPLY = 18;
    REQUEST_TYPE_RECOVERABLE_ERROR = 19;
  }

  RequestType typ = 3;
  oneof payload {
    CreateAccountRequest create_account_request = 4;
    CreateAccountResponse create_account_reply = 5;
    DeleteAccountRequest delete_account_request = 6;
    DeleteAccountResponse delete_account_reply = 7;
    GetAccountDescriptorRequest get_account_descriptor_request = 8;
    GetAccountDescriptorResponse get_account_descriptor_reply = 9;
    CreateBucketRequest create_bucket_request = 10;
    CreateBucketResponse create_bucket_reply = 11;
    DeleteBucketRequest delete_bucket_request = 12;
    DeleteBucketResponse delete_bucket_reply = 13;
    GetKeyRequest get_key_request = 14;
    GetKeyResponse get_key_reply = 15;
    PutKeyRequest put_key_request = 16;
    PutKeyResponse put_key_reply = 17;
    DeleteKeyRequest delete_key_request = 18;
    DeleteKeyResponse delete_key_reply = 19;
    GetBucketDescriptorRequest get_bucket_descriptor_request = 20;
    GetBucketDescriptorResponse get_bucket_descriptor_reply = 21;
    errorspb.Error error = 22;
  }
}

message CreateAccountRequest {
  uint64 account_id = 1;
  string owner = 2;
  Transaction transaction = 3;
}

message CreateAccountResponse {
  AccountDescriptor account_descriptor = 1;
  Transaction transaction = 2;
}

message DeleteAccountRequest {
  uint64 account_id = 1;
  string owner = 2;
  Transaction transaction = 3;
}

message DeleteAccountResponse {
  bool ok = 1;
  Transaction transaction = 2;
}

message GetAccountDescriptorRequest {
  uint64 account_id = 1;
}

message GetAccountDescriptorResponse {
  AccountDescriptor account_descriptor = 1;
}

message AccountDescriptor {
  uint64 account_id = 1;
  string owner = 2;
  google.protobuf.Timestamp created = 3;
  google.protobuf.Timestamp last_updated = 4;
  uint64 bucket_count = 5;
  repeated string buckets = 6;
}

message CreateBucketRequest {
  uint64 account_id = 1;
  string name = 2;
  string owner = 3;
  Transaction transaction = 4;
}

message CreateBucketResponse {
  BucketDescriptor bucket_descriptor = 1;
  Transaction transaction = 2;
}

message DeleteBucketRequest {
  uint64 account_id = 1;
  string name = 2;
  Transaction transaction = 3;
}

message DeleteBucketResponse {
  bool ok = 1;
  Transaction transaction = 2;
}

message BucketDescriptor {
  string owner = 1;
  uint64 size = 2;
  uint64 key_count = 3;
  google.protobuf.Timestamp created = 4;
  google.protobuf.Timestamp last_updated = 5;
}

message GetBucketDescriptorRequest {
  uint64 account_id = 1;
  string bucket_name = 2;
}

message GetBucketDescriptorResponse {
  BucketDescriptor bucket_descriptor = 1;
}

message GetKeyRequest {
  uint64 account_id = 1;
  string bucket_name = 2;
  bytes key = 3;
  optional uint32 version = 4;
}

message GetKeyResponse {
  KeyValue key_value_pair = 1;
}

message PutKeyRequest {
  uint64 account_id = 1;
  string bucket_name = 2;
  KeyValue key_value_pair = 3;
  Transaction transaction = 4;
}

message PutKeyResponse {
  Transaction transaction = 1;
}

message DeleteKeyRequest {
  uint64 account_id = 1;
  string bucket_name = 2;
  bytes key = 3;
  Transaction transaction = 4;
}

message DeleteKeyResponse {
  bool ok = 1;
  Transaction transaction = 3;
}

message KeyValueDescriptor {
  repeated uint32 versions = 1;
  bytes current_key = 2;
}

message ListKeyVersionsRequest {
  bytes key = 1;
}

message ListKeyVersionsResponse {
  repeated uint32 versions = 1;
}

// Timestamp represents a state of the hybrid logical clock. This type comes
// from CockroachDB and is used with their HLC implementation.
message Timestamp {
  // Holds a wall time, typically a unix epoch time expressed in
  // nanoseconds.
  //
  // It is not safe to mutate this field directly. Instead, use one of the
  // methods on Timestamp, which ensure that the synthetic flag is updated
  // appropriately.
  int64 wall_time = 1;
  // The logical component captures causality for events whose wall times
  // are equal. It is effectively bounded by (maximum clock skew)/(minimal
  // ns between events) and nearly impossible to overflow.
  //
  // It is not safe to mutate this field directly. Instead, use one of the
  // methods on Timestamp, which ensure that the synthetic flag is updated
  // appropriately.
  int32 logical = 2;
  // Indicates that the Timestamp did not come from an HLC clock somewhere
  // in the system and, therefore, does not have the ability to update a
  // peer's HLC clock. If set to true, the "synthetic timestamp" may be
  // arbitrarily disconnected from real time.
  //
  // The flag serves as the dynamically typed version of a ClockTimestamp
  // (but inverted). Only Timestamps with this flag set to false can be
  // downcast to a ClockTimestamp successfully (see
  // DeprecatedTryToClockTimestamp).
  //
  // Synthetic timestamps with this flag set to true are central to
  // non-blocking transactions, which write "into the future". Setting the
  // flag to true is also used to disconnect some committed MVCC versions
  // from observed timestamps by indicating that those versions were moved
  // from the timestamp at which they were originally written. Committed
  // MVCC versions with synthetic timestamps require observing the full
  // uncertainty interval, whereas readings off the leaseholders's clock
  // can tighten the uncertainty interval that is applied to MVCC versions
  // with clock timestamp.
  //
  // This flag does not affect the sort order of Timestamps. However, it
  // is considered when performing structural equality checks (e.g. using
  // the == operator). Consider use of the EqOrdering method when testing
  // for equality.
  bool synthetic = 3;
}

// ValueType defines a set of type constants placed in the "tag" field of Value
// messages. The constants are pulled from CockroachDB's roachpb.ValueType
enum ValueType {
  // This is a subset of the SQL column type values, representing the underlying
  // storage for various types. The DELIMITED_foo entries each represent a foo
  // variant that self-delimits length.
  UNKNOWN = 0;
  INT = 1;
  FLOAT = 2;
  BYTES = 3;
  TIME = 4;
  DECIMAL = 5;
  DURATION = 6;
  reserved 7;
  DELIMITED_BYTES = 8;
  DELIMITED_DECIMAL = 9;

  // TUPLE represents a DTuple, encoded as repeated pairs of varint field number
  // followed by a value encoded Datum.
  TUPLE = 10;
  BITARRAY = 11;

  TIMETZ = 12;
  GEO = 13;
  BOX2D = 14;

  // TIMESERIES is applied to values which contain InternalTimeSeriesData.
  TIMESERIES = 100;
}

message Value {
  bytes raw_bytes = 1;
  Timestamp timestamp = 2;
}

message KeyValue {
  // key is the key in bytes. An empty key is not allowed.
  bytes key = 1;
  // create_revision is the revision of last creation on this key.
  int64 create_revision = 2;
  // mod_revision is the revision of last modification on this key.
  int64 mod_revision = 3;
  // version is the version of the key. A deletion resets
  // the version to zero and any modification of the key
  // increases its version.
  uint32 version = 4;
  // value is the value held by the key, in bytes.
  bytes value = 5;
  // lease is the ID of the lease that attached to key.
  // When the attached lease expires, the key will be deleted.
  // If lease is 0, then no lease is attached to the key.
  int64 lease = 6;
}

enum KeyOperationType {
  KEY_OPERATION_TYPE_UNSPECIFIED = 0;
  KEY_OPERATION_TYPE_GET = 1;
  KEY_OPERATION_TYPE_PUT = 2;
  KEY_OPERATION_TYPE_DELETE = 3;
}

message Event {
  // type is the kind of event. If type is a PUT, it indicates
  // new data has been stored to the key. If type is a DELETE,
  // it indicates the key was deleted.
  KeyOperationType type = 1;
  // kv holds the KeyValue for the event.
  // A PUT event contains current kv pair.
  // A PUT event with kv.Version=1 indicates the creation of a key.
  // A DELETE/EXPIRE event contains the deleted key with
  // its modification revision set to the revision of deletion.
  KeyValue kv = 2;

  // prev_kv holds the key-value pair before the event happens.
  optional KeyValue prev_kv = 3;
}
